--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ html{
     display: flex;
     flex-wrap: wrap;
 }
+hr{
+    padding: 10px;
+}
 
 /* header */
 .header-top{
@@ -53,9 +56,13 @@ html{
 }
 .mini-box{
     width: calc(100% / 2);
+    height: calc(100vw / 6);
 
 }
 /* footer */
+.col-1-5{
+    width: calc(100% / 5);
+}
 
 /* debug */
  .debug .header-top{
@@ -104,5 +111,10 @@ html{
     border: 1px dashed black;
  }
  .debug .mini-box{
-    
+    background-color: red;
+    border: 1px dashed black
+
+ }
+ .debug .col-1-5{
+    background: red;
  }
