--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,44 @@ main{
 .type-plans .plans-bottom{
     padding: 20px;
 }
-.type-plans .plans-bottom > section:nth-child(3){
+
+.type-plans .plans-bottom > section{
     padding: 20px;
+}
+.type-plans .plans-bottom > section > h3{
+    padding-bottom: 10px;
+}
+.type-plans .plans-bottom > section > h4{
+    padding-bottom: 10px;
+}
+.type-plans .plans-bottom > section > ul li i{
+ color: #0061ff;
+}
+.type-plans .plans-bottom .row .col-70 > *{
+    padding: 20px;
+}
+.type-plans .plans-bottom .row .col-70 > * >h5{
+    padding-top: 30px;
+}
+.type-plans .plans-bottom .row .col-70 > * >p{
+    padding-top: 48px;
+}
+.type-plans .plans-bottom .row .col-30{
+    padding :40px;
+}
+.container-small .row .col-30 > div {
+    padding: 20px;
+} 
+.container-small .row .col-30 > div >p {
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+#bottone-b-b{
+    padding: 10px;
+    border:1px solid black;
+    text-decoration: none;
+    color: black;
+    
 }
 .row .col-1-3{
     width: calc(100% / 3);
@@ -155,6 +191,7 @@ main .container-small .plans h2 {
 #radio-button{
     margin: 20px 0;
 }
+
 /* footer */
 .col-1-5{
     width: calc(100% / 5);
@@ -177,7 +214,7 @@ main .container-small .plans h2 {
  } */
  .debug .container-small .plans{
     /* height: 335px; */
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
  }
  .debug .container-small .row .col-1-3{
     height: 400px;
@@ -187,7 +224,7 @@ main .container-small .plans h2 {
  .debug .team{
     border: 1px dashed black;
  }
- .debug .col-70{
+/*  .debug .col-70{
     background-color: aquamarine;
     border: 1px dashed red;
     min-height: 215px;
@@ -196,7 +233,7 @@ main .container-small .plans h2 {
     background-color: aquamarine;
     border: 1px dashed red;
     
- }
+ } */
  .debug .container-small .info-client{
     min-height: 200px;
     background-color: green;
