--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,17 @@ main{
     
 }
 .row .col-1-3{
-    width: calc(100% / 3);
+    width: calc((100% / 3) - 10px);
+    margin: 0 5px;
+    margin-bottom: 10px;
     
+}
+.info-client{
+    margin:100px 0;
+}
+.info-client > h2{
+   padding-bottom: 60px;
+   font-size: 40px;
 }
 .team{
     padding: 10px 0 ;
@@ -181,10 +190,56 @@ main{
     height: calc(100vw / 6);
     padding: 50px;
 }
-.row > .mini-box:nth-child(2){
-    background-color: #61082b;
-    color: white;
+main > .row > .box:nth-child(2) > div{
+    
+    padding: 30px;
 }
+main > .row > .box:nth-child(2) > div > img{
+   
+    width: 60%;
+    padding-bottom: 10px;
+}
+main > .row > .box:nth-child(2) > div > p{
+   padding: 25px 0;
+}
+.mini-box img{
+    filter: invert(1);
+}
+
+main > .row > .box:first-child > .row > .mini-box:first-child{
+    background-color: #a2d39b;
+    
+}
+main > .row > .box:first-child > .row > .mini-box:nth-child(2){
+    background-color: #61082b;
+    
+}
+main > .row > .box:first-child > .row > .mini-box:nth-child(3){
+    background-color: #0093ce;
+    
+}
+main > .row > .box:first-child > .row > .mini-box:last-child{
+    background-color: #ff1c1c;
+    
+}
+main > .row > .box:nth-child(2){
+    background-color: #f5f5f5;
+    
+}
+main > .row > .box:last-child > .row > .mini-box:first-child{
+    background-color: #d5001f;
+    
+}main > .row > .box:last-child > .row > .mini-box:nth-child(2){
+    background-color: #b4d0e7;
+    
+}main > .row > .box:last-child > .row > .mini-box:nth-child(3){
+    background-color: #0d2481;
+    
+}main > .row > .box:last-child > .row > .mini-box:last-child{
+    background-color: #ffd830;
+    
+}
+
 main .container-small .plans h2 {
     font-size: 40px;
 }
@@ -212,18 +267,18 @@ main .container-small .plans h2 {
  /* .debug .container-small{
     border: 2px dashed violet;
  } */
- .debug .container-small .plans{
-    /* height: 335px; */
-    /* background-color: aquamarine; */
- }
- .debug .container-small .row .col-1-3{
+ /* .debug .container-small .plans{
+    height: 335px;
+    background-color: aquamarine;
+ } */
+/*  .debug .container-small .row .col-1-3{
     height: 400px;
     background-color: red;
     border:1px dashed black
- }
- .debug .team{
+ } */
+/*  .debug .team{
     border: 1px dashed black;
- }
+ } */
 /*  .debug .col-70{
     background-color: aquamarine;
     border: 1px dashed red;
@@ -234,12 +289,12 @@ main .container-small .plans h2 {
     border: 1px dashed red;
     
  } */
- .debug .container-small .info-client{
+/*  .debug .container-small .info-client{
     min-height: 200px;
     background-color: green;
     
- }
-.debug .row .box{
+ } */
+/* .debug .row .box{
     background-color: chocolate;
     border: 1px dashed black;
  }
@@ -247,7 +302,7 @@ main .container-small .plans h2 {
     background-color: red;
     border: 1px dashed black
 
- }
+ } */
  .debug .col-1-5{
     background: red;
  }
