--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,13 @@ html{
     display: flex;
     flex-wrap: wrap;
 }
-hr{
-    margin: 10px;;
-}
+
 .bottone{
     padding: 10px;
     text-decoration: none;
+    
+    display: inline-block;
+    
     
     
 }
@@ -62,6 +63,12 @@ ul{
     
     
 }
+.header-top > nav:first-child > ul {
+    display: flex;
+    align-items: center;
+}
+
+
 .header-bottom{
     background-color: #b4d0e7;
  }
@@ -279,12 +286,59 @@ main .container-small .plans h2 {
 .full-screen-color .container-small .row .col-30{
     padding: 30px 10px;
 }
+.container-small .faq > *{
+    display: flex;
+    border-top: 1px solid black;
+    padding: 30px 0;
+}
+.container-small .faq  p{
+    flex-grow:1;
+}
+
+.container-small .info-client > .faq:last-child{
+    border-bottom: 1px solid black;
+}
 
 /* footer */
+#bc-black{
+    background-color: #000000;
+}
 .col-1-5{
     width: calc(100% / 5);
 }
-
+footer .row{
+    padding:100px 0;
+}
+footer .row .col-1-5 > nav ul li a{
+   text-decoration: none;
+   color: white;
+   
+}
+footer .row .col-1-5 > nav ul li{
+    padding: 8px 0;
+    
+ }
+footer .row .col-1-5 > h3{
+    padding-bottom: 20px ;
+    color: white;
+    font-size: 25px;
+ }
+ .container-big hr{
+    width: 10%;
+    margin-bottom:50px ;
+ }
+ .footer-bottom {
+    display: flex;
+    
+    align-items: center;
+    padding-bottom: 50px;
+ }
+ .footer-bottom > *{
+    color: white;
+ }
+ .footer-bottom > p{
+    padding:  10px;
+ }
 /* debug */
 /*  .debug .header-top{
     background-color:orange ;
@@ -336,6 +390,6 @@ main .container-small .plans h2 {
     border: 1px dashed black
 
  } */
- .debug .col-1-5{
+ /* .debug .col-1-5{
     background: red;
- }
+ } */
